--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ weight_uvr5_root = assets/uvr5_weights
 index_root = logs
 outside_index_root = assets/indices
 rmvpe_root = assets/rmvpe
+weight_ans_path = assets/denoise
